...
    </View>
  );

  return (
    <View style={styles.container}>
      <RefreshableList
        testID="noteList_list_notes"
        data={notes}
        keyExtractor={item => item.id}
        contentContainerStyle={notes.length === 0 ? styles.emptyContainer : styles.listContent}
        renderItem={renderNoteItem}
        onRefresh={handleRefresh}
        emptyComponent={emptyComponent}
...
